fix margin error on safari and chrome

--- a/css/sheet.css
+++ b/css/sheet.css
@@ -171,10 +171,6 @@ a{
   border: none;
 }
 
-img:hover{
-    
-}
-
 @media only screen and (max-width: 350px) {
  
   body {
